/*
 * This Java source file was generated by the Gradle 'init' task.
 */

package Sout1;

import java.util.Scanner;

public class App {

    public static void main(String[] args) {

        Game start = new Game();


        /*

        String s1 = input.nextLine();
        if (s1 == "yes") {
            System.out.println("Good");
        } else {
            System.out.println("try again");
        }
        String s2 = input.nextLine();
        input.close();

        Ptimos s = new Sacbleu();
        Player player = new Player("Juliette");
        player.observer(s);
        player.approcher(s);
        player.approcher(s);
        player.approcher(s);
        */
    }
}
